<resources>
    <string name="app_name">formVeriktarma</string>
    <string name="adSoyad">Ad Soyad</string>
    <string name="ogrenciNo">Öğrenci No</string>
    <string name="btnGonder">Gönder</string>
    <string name="sinifSeciniz">Sınıf Seçiniz</string>
    <string name="sinif">Sınıf</string>
    <string name="sinif9">9</string>
    <string name="sinif10">10</string>
    <string name="sinif11">11</string>
    <string name="sinif12">12</string>
    <string name="cinsSeciniz">Cinsiyet</string>
    <string name="cinsKadin">Kadın</string>
    <string name="cinsErkek">Erkek</string>
    <string name="katilmakIstiyorum">Katılmak İstiyorum</string>
    <string name="katilmaDurumu">Katılma Durumu</string>
</resources>